@@ -1,5 +1,10 @@
 2010-06-13  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>
 
+	* interface.c, pbuf.c:
+	    The pbuf_new() has a limit on maximum total size that
+	    a packet can be: 2150 bytes.  If ax25len + tnc2len are
+	    more than that, pbuf_new() returns NULL.
+
 	* historydb.c, historydb.h:
 	    Instead of historydb instance specific history entry pools,
 	    have one global pool.
